# noir-oracle-server-rs

./: Cargo.toml  README.md  REAMDE.md  test.sh
noir_packages/: Nargo.toml
noir_packages/src/: main.nr
src/: foreign_call.rs  handlers.rs  main.rs  ops.rs
