[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
hyper = "1.5.0"
jsonrpsee = { version = "0.24.7", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-tls"] }
tokio = "1.41.0"
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower = { version = "0.5.1", features= ["full"]} 
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

